refactor: shrinked for limited resources