@@ -1,19 +1,10 @@
-FROM maven:3.9.6-eclipse-temurin-21-alpine AS build
+FROM ubuntu:noble-slim
 WORKDIR /app
 
-COPY pom.xml .
-RUN mvn dependency:go-offline
+RUN apt-get update && apt-get install -y libstdc++6 postgresql-client && rm -rf /var/lib/apt/lists/*
 
-COPY src ./src
-RUN mvn clean package -DskipTests
-
-FROM eclipse-temurin:21-jre-alpine
-WORKDIR /app
-
-RUN apk add --no-cache postgresql-client
-
-COPY --from=build /app/target/*.jar app.jar
+COPY target/atlas atlas
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-Xmx1536m", "-Xms1024m", "-XX:+UseZGC", "-XX:+ZGenerational", "-jar", "app.jar"]
+ENTRYPOINT ["./atlas"]
